--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <link rel="stylesheet" href="style.css">
 <p>This is My first Repo.</p>
-<p>This is a New Feature.</p>
+<p>This is a New Feature (button)</p>
